# omnibus

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile.dev  config.example.sh  config.sh  devcontainer.example.json  devcontainer.json  docker-compose.dev.yml  post-build-script.sh  pre-build-script.sh
app/: __init__.py  factory.py  main.py  middleware.py
app/core/: config.py  exceptions.py  logger.py  models.py
src/omnibus/: app.py  healthcheck.py  operation_id.py
src/omnibus/auth/: jwt.py
src/omnibus/config/: settings.py
src/omnibus/database/: repository.py
src/omnibus/log/: logger.py
src/omnibus/middleware/: cors.py  exceptions.py
src/omnibus/tests/: fixtures.py  uvicorn_test_server.py
