[tool.poetry]
name = "omnibus"
version = "0.3.3"
description = "A library containing core code between FastAPI webservices for the Banter Bus application."
authors = ["Haseeb Majid <hello@haseebmajid.dev>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.78.0"
uvicorn = { extras = ["standard"], version = "^0.18.1" }
python-dotenv = "^0.19.2"
structlog = "^21.2.0"
beanie = "^1.8.5"
motor = "^2.5.1"
pydantic = { extras = ["dotenv"], version = "^1.9.1" }
fastapi-health = "^0.4.0"
google-auth = "^2.3.3"
requests = "^2.27.0"
dnspython = "^2.2.1"

[tool.poetry.dev-dependencies]
black = "22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
ipython = "^7.29.0"
pre-commit = "^2.15.0"
httpx = "^0.21.1"
asgi-lifespan = "^1.0.1"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
pytest-asyncio = "^0.16.0"
factory-boy = "^3.2.1"
pytest-cov = "^3.0.0"
coverage = "^6.2"
pyupgrade = "^2.34.0"
mypy = "^0.961"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["src", "tests"]

[tool.black]
line-length = 120

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
